--- a/css/inicio.css
+++ b/css/inicio.css
@@ -5,31 +5,26 @@ body{
 }
 .logo-junta-pe{
   height: 104px;
-  margin: 35px 60px;
+  margin: 10% 0 0 22%;
 }
 .intro-junta{
-  margin: 60px 30px 0px 80px;
+  margin: 20% 0% 0px 5%;
 }
 .intro-junta h3{
-  font-size: 21px;
+  font-size: 160%;
   color: #ffffff;
 }
 .intro-junta h2{
   color: #FFB301;
   font-weight: bold;
 }
-.img{
-  position: relative;
-  left: -10px;
-  right: -20px;
-}
 .ingresar{
-  top: 70px;
+  top: 8.2em;
 }
 .ingresar button{
   color: #ffffff;
   font-size: 17px;
   position: relative;
-  top: 125px;
-  left: 28px;
+  top: 7.3em;
+  left: 9%;
 }
