--- a/css/login.css
+++ b/css/login.css
@@ -5,25 +5,24 @@ body{
 }
 .intro-login{
 	color: #ffffff;
-	margin: 80px 0px 0 20px;
+	margin: 19% 0px 0 8%;
 	font-size: 18px;
-	font-weight: regular;
 }
 .intro-login span{
 	color: #FDB201;
 }
 input[name="numero-celular"]{
-	width: 310px;
+	width: 315px;
 	font-size: 19px;
 	padding: 0 0 0 10px;
-	margin: 40px 0 0 18px;
+	margin: 15% 0 0 6%;
 }
 input[name="terminos-condiciones"]{
-	margin: 19px 0 0 20px;
+	margin: 19px 0 0 6%;
 	background-color: #ffffff;
 }
-input[name="terminos-condiciones"] + label, label a{
-	font-size: 17px;
+input[name="terminos-condiciones"] + label{
+	font-size: 15.5px;
 	width: 261.6px;
 	height: 20px;
 	font-weight: normal;
@@ -31,13 +30,17 @@ input[name="terminos-condiciones"] + label, label a{
 	font-stretch: normal;
 	color: #ffffff;
 }
-.ingresar{
-  top: 109px;
+label a{
+	font-size: 15.5px;
+	text-decoration: underline;
 }
-.ingresar button{
+.iniciar-sesion{
+  top: 8.62em;
+}
+.iniciar-sesion button{
   color: #ffffff;
   font-size: 17px;
   position: relative;
-  top: 115px;
-  left: 28px;
+  top: 7.3em;
+  left: 9%;
 }
