--- a/css/utilities.css
+++ b/css/utilities.css
@@ -44,6 +44,9 @@
   height: 25.3px;
   background-color: rgba(255, 255, 255, 0.75);
 }
+.yellow{
+  color: #ffb301;
+}
 /*-----------nav-----------------*/
 .user-right{
   position: absolute;
@@ -76,7 +79,7 @@
 .nube-footer{
     background-image: url(../image/nube-fondo@2x.png);
     background-repeat: no-repeat;
-    background-size: 380px;
+    background-size: 375px 207px;
     height: 200px;
     background-position: -14px;
     position: relative;
