--- a/css/login.css
+++ b/css/login.css
@@ -5,37 +5,43 @@ body{
 }
 .intro-login{
 	color: #ffffff;
-	margin: 19% 0px 0 8%;
-	font-size: 18px;
+	margin: 23% 0px 0 7%;
+	text-shadow: 0 3px 4px rgba(0, 0, 0, 0.2);
 }
 .intro-login span{
 	color: #FDB201;
+	font-weight: bold;
 }
 input[name="numero-celular"]{
 	width: 315px;
 	font-size: 19px;
 	padding: 0 0 0 10px;
-	margin: 15% 0 0 6%;
+	margin: 26% 0 0 5.8%;
+	border: none;
+	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 }
 input[name="terminos-condiciones"]{
-	margin: 19px 0 0 6%;
-	background-color: #ffffff;
+	margin: 3% 0 0 6%;
+	border-radius: 5px;
+  background-color: transparent;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
 }
 input[name="terminos-condiciones"] + label{
-	font-size: 15.5px;
+	font-size: 17px;
 	width: 261.6px;
 	height: 20px;
 	font-weight: normal;
 	font-style: normal;
 	font-stretch: normal;
-	color: #ffffff;
+	color: rgba(255, 255, 255 , 0.7);
 }
 label a{
-	font-size: 15.5px;
 	text-decoration: underline;
+	text-underline-position: 6;
 }
 .iniciar-sesion{
-  top: 8.62em;
+  background-size: 374px;
+  top: 5.6em;
 }
 .iniciar-sesion button{
   color: #ffffff;
