--- a/css/utilities.css
+++ b/css/utilities.css
@@ -69,6 +69,7 @@
   left: 60px;
   top: 0px;
   font-family: 'Roboto', sans-serif;
+  font-weight: bold;
   color: #FFFFFF;
 }
 /*-------------fin----------------*/
