--- a/css/configura-tu-junta.css
+++ b/css/configura-tu-junta.css
@@ -3,14 +3,14 @@
 	margin-right: 0px;
 }
 
-.nube-footer{
+/* .nube-footer{
     background-image: url(../image/nube-fondo@2x.png);
     background-repeat: no-repeat;
     background-size: 380px;
     height: 200px;
     position: relative;
     top: 78px;
-}
+} */
 
 .datosUsuario {
 	margin-top: 50px;
