--- a/css/login.css
+++ b/css/login.css
@@ -26,6 +26,7 @@ input[name="terminos-condiciones"]{
   background-color: transparent;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
 }
+
 input[name="terminos-condiciones"] + label{
 	font-size: 17px;
 	width: 261.6px;
@@ -44,9 +45,12 @@ label a{
   top: 5.6em;
 }
 .iniciar-sesion button{
-  color: #ffffff;
   font-size: 17px;
+  font-weight: bold;
   position: relative;
   top: 7.3em;
   left: 9%;
+}
+.iniciar-sesion button a{
+	color: #ffffff;
 }
